k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cryptotronbot
  labels:
    name: cryptotronbot
    app: cryptotronbot
