k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cryptotronbot-backend-service
  namespace: cryptotronbot
  labels:
    app: cryptotronbot
    component: backend
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: cryptotronbot
    component: backend
---
apiVersion: v1
kind: Service
metadata:
  name: cryptotronbot-frontend-service
  namespace: cryptotronbot
  labels:
    app: cryptotronbot
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 4567
    targetPort: 4567
    protocol: TCP
    name: http
  selector:
    app: cryptotronbot
    component: frontend
